add new javadoc ant target for plugins
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@34038 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/CustomizePublicTransportStop/build.xml
+++ b/CustomizePublicTransportStop/build.xml
@@ -34,6 +34,22 @@
             <compilerarg value="-Xlint:unchecked" />
         </javac>
     </target>
+    <target name="javadoc" depends="init">
+        <javadoc destdir="javadoc"
+                sourcepath="${plugin.src.dir}"
+                encoding="UTF-8"
+                windowtitle="${ant.project.name}"
+                use="true"
+                private="true"
+                linksource="true"
+                author="false">
+            <classpath refid="compile.path"/>
+            <link href="http://docs.oracle.com/javase/8/docs/api"/>
+            <link href="https://josm.openstreetmap.de/doc"/>
+            <doctitle><![CDATA[<h2>${ant.project.name} - Javadoc</h2>]]></doctitle>
+            <bottom><![CDATA[<a href="https://josm.openstreetmap.de/wiki/Plugins">JOSM Plugins</a>]]></bottom>
+        </javadoc>
+    </target>
 
     <target name="dist" depends="clean,init,compile" description="Create the plugin jar">
         <tstamp>
