--- a/CustomizePublicTransportStop/build.xml
+++ b/CustomizePublicTransportStop/build.xml
@@ -44,7 +44,7 @@
                 linksource="true"
                 author="false">
             <classpath refid="compile.path"/>
-            <link href="http://docs.oracle.com/javase/8/docs/api"/>
+            <link href="https://docs.oracle.com//javase/8/docs/api"/>
             <link href="https://josm.openstreetmap.de/doc"/>
             <doctitle><![CDATA[<h2>${ant.project.name} - Javadoc</h2>]]></doctitle>
             <bottom><![CDATA[<a href="https://josm.openstreetmap.de/wiki/Plugins">JOSM Plugins</a>]]></bottom>
