--- a/opendata/.classpath
+++ b/opendata/.classpath
@@ -22,5 +22,10 @@
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/JOSM-apache-commons"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JOSM-EJML"/>
+	<classpathentry kind="lib" path="lib/jdom-1.1.3.jar" sourcepath="lib/jdom-1.1.3-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/JOSM-OpenData/lib/jdom-1.1.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
