--- a/pt_assistant/build.xml
+++ b/pt_assistant/build.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project name="pt_assistant" default="dist" basedir=".">
 
-  <!-- enter the SVN commit message --> 
+  <!-- enter the SVN commit message -->
   <property name="commit.message" value="Commit message"/>
   <!-- enter the *lowest JOSM version this plugin is currently compatible with -->
   <property name="plugin.main.version" value="13729"/>
 
-  <property name="plugin.author" value="Darya Golovko darya0705@gmail.com"/>
+  <property name="plugin.author" value="Biswesh Mohapatra biswesh123@gmail.com"/>
   <property name="plugin.class" value="org.openstreetmap.josm.plugins.pt_assistant.PTAssistantPlugin"/>
   <property name="plugin.description" value="Provides validation and fixing for public transport route according to version 2 of the public transport schema"/>
   <property name="plugin.icon" value="..."/>
   <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/PT_Assistant"/>
   <property name="plugin.canloadatruntime" value="true"/>
-  
+
   <!-- ** include targets that all plugins have in common ** -->
   <import file="../build-common.xml"/>
 </project>
