--- a/opendata/build.xml
+++ b/opendata/build.xml
@@ -3,7 +3,7 @@
     <property name="plugin.main.version" value="13927"/>
     <property name="plugin.author" value="Don-vip"/>
     <property name="plugin.class" value="org.openstreetmap.josm.plugins.opendata.OdPlugin"/>
-    <property name="plugin.description" value="Convert data from Open Data portals to OSM layer"/>
+    <property name="plugin.description" value="Allows JOSM to read Open Data formats (csv, xls, ods, kml, kmz, shp, mif) into an .osm data layer. Supports zip and 7z compression of these file types."/>
     <property name="plugin.icon" value="images/dialogs/o24.png"/>
     <property name="plugin.canloadatruntime" value="true"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/OpenData"/>
