--- a/opendata/build.xml
+++ b/opendata/build.xml
@@ -65,7 +65,11 @@
     -->
     <target name="compile_neptune" depends="init, xjc_neptune">
         <echo message="compiling Neptune ... "/>
-        <javac srcdir="includes/neptune" debug="false" destdir="${plugin.build.dir}" includeAntRuntime="false" encoding="UTF-8" />
+        <javac srcdir="includes/neptune" debug="false" destdir="${plugin.build.dir}" includeAntRuntime="false" encoding="UTF-8">
+            <classpath>
+                <fileset refid="jaxb.jars"/>
+            </classpath>
+        </javac>
     </target>
     <!--
     **********************************************************
@@ -82,6 +86,7 @@
                 <pathelement location="${jts}"/>
                 <pathelement location="${ejml}"/>
                 <pathelement location="${geotools}"/>
+                <fileset refid="jaxb.jars"/>
             </classpath>
             <compilerarg value="-Xlint:deprecation"/>
             <compilerarg value="-Xlint:unchecked"/>
