rename package, fix checkstyle and javadoc warnings
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@34489 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/alignways/build.xml
+++ b/alignways/build.xml
@@ -9,7 +9,7 @@
          See https://josm.openstreetmap.de/wiki/DevelopersGuide/DevelopingPlugins
     -->
     <property name="plugin.author" value="Attila Szász"/>
-    <property name="plugin.class" value="com.tilusnet.josm.plugins.alignways.AlignWaysPlugin"/>
+    <property name="plugin.class" value="org.openstreetmap.josm.plugins.alignways.AlignWaysPlugin"/>
     <property name="plugin.description" value="Makes a pair of selected way segments parallel by rotating one of them around a chosen pivot."/>
     <property name="plugin.icon" value="images/alignways.png"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/AlignWayS"/>
