--- a/jts/.classpath
+++ b/jts/.classpath
@@ -3,9 +3,19 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JOSM"/>
-	<classpathentry exported="true" kind="lib" path="lib/jts-1.13.jar" sourcepath="lib/jts-1.13-sources.jar">
+	<classpathentry exported="true" kind="lib" path="lib/jts-core-1.14.0.jar" sourcepath="lib/jts-core-1.14.0-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/JOSM-jts/lib/jts-1.13-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/JOSM-jts/lib/jts-core-1.14.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="lib/jts-io-1.14.0.jar" sourcepath="lib/jts-io-1.14.0-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/JOSM-jts/lib/jts-io-1.14.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="lib/jts-example-1.14.0.jar" sourcepath="lib/jts-example-1.14.0-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/JOSM-jts/lib/jts-example-1.14.0-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
