--- a/terracer/build.xml
+++ b/terracer/build.xml
@@ -3,7 +3,7 @@
     <property name="commit.message" value="applied #j5760 (patch by robome) - Order of housenumbers not correct"/>
     <property name="plugin.main.version" value="14153"/>
     <property name="plugin.author" value="Matt Amos"/>
-    <property name="plugin.class" value="terracer.TerracerPlugin"/>
+    <property name="plugin.class" value="org.openstreetmap.josm.plugins.terracer.TerracerPlugin"/>
     <property name="plugin.description" value="Make terraced houses out of single blocks."/>
     <property name="plugin.icon" value="images/terrace.png"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/Terracer"/>
