--- a/openjfx/build.xml
+++ b/openjfx/build.xml
@@ -79,5 +79,15 @@
                 </archives>
             </restrict>
         </jar>
+        <echo>Adding Monocle artifacts...</echo>
+        <jar destfile="${plugin.jar}" update="true" duplicate="preserve" level="9">
+            <restrict>
+                <archives>
+                    <zips>
+                        <fileset dir="${plugin.lib.dir}" includes="*-monocle*.jar"/>
+                    </zips>
+                </archives>
+            </restrict>
+        </jar>
     </target>
 </project>
