Apache HTTP client needs JNA on Windows
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@34632 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/apache-http/build.xml
+++ b/apache-http/build.xml
@@ -13,7 +13,7 @@
     
 	<property name="josm" location="../../core/dist/josm-custom.jar"/>
 	<property name="plugin.dist.dir" value="../../dist"/>
-    <property name="plugin.requires" value="apache-commons"/>
+    <property name="plugin.requires" value="apache-commons;jna"/>
     <property name="plugin.stage" value="15"/>
 
     <!-- ** include targets that all plugins have in common ** -->
