--- a/opendata/build.xml
+++ b/opendata/build.xml
@@ -7,13 +7,14 @@
     <property name="plugin.icon" value="images/dialogs/o24.png"/>
     <property name="plugin.canloadatruntime" value="true"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/OpenData"/>
-    <property name="plugin.requires" value="apache-commons;jts;ejml;geotools;utilsplugin2"/>
+    <property name="plugin.requires" value="apache-commons;jaxb;jts;ejml;geotools;utilsplugin2"/>
 
     <!-- ** include targets that all plugins have in common ** -->
     <import file="../build-common.xml"/>
 
     <fileset id="plugin.requires.jars" dir="${plugin.dist.dir}">
         <include name="apache-commons.jar"/>
+        <include name="jaxb.jar"/>
         <include name="jts.jar"/>
         <include name="ejml.jar"/>
         <include name="geotools.jar"/>
