fix #josm19264 - HouseNumberTaggingTool: update plugin.description (patch by alexrudd)
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@35467 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/HouseNumberTaggingTool/build.xml
+++ b/HouseNumberTaggingTool/build.xml
@@ -9,7 +9,7 @@
     -->
     <property name="plugin.author" value="Oliver Raupach"/>
     <property name="plugin.class" value="org.openstreetmap.josm.plugins.housenumbertool.HouseNumberTaggingToolPlugin"/>
-    <property name="plugin.description" value="Simple tool to tag house numbers."/>
+    <property name="plugin.description" value="Simple tool to tag house numbers and addresses."/>
     <property name="plugin.icon" value="images/home-icon32.png"/>
     <property name="plugin.link" value="https://josm.openstreetmap.de/wiki/Help/Plugin/HouseNumberTaggingTool"/>
 
