see #15240 - Change png icon to svg, derived from josm core icons mapmode/delete and downloadprimitive, waste bin original from https://commons.wikimedia.org/wiki/File:Gnome-edit-delete.svg, from GNOME Project, LGPL licensed
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@35521 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/undelete/build.xml
+++ b/undelete/build.xml
@@ -8,7 +8,7 @@
     <property name="plugin.author" value="Nakor"/>
     <property name="plugin.class" value="org.openstreetmap.josm.plugins.undelete.Undelete"/>
     <property name="plugin.description" value="Allows undeleting object from OSM database"/>
-    <property name="plugin.icon" value="images/undelete.png"/>
+    <property name="plugin.icon" value="images/undelete.svg"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/Undelete"/>
 
     <!-- ** include targets that all plugins have in common ** -->
