change icon to svg (forgotten file)
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@35546 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/imagery-xml-bounds/build.xml
+++ b/imagery-xml-bounds/build.xml
@@ -12,7 +12,7 @@
     <property name="plugin.class" value="org.openstreetmap.josm.plugins.imageryxmlbounds.ImageryXmlBoundsPlugin"/>
     <property name="plugin.description" value="Generate Imagery XML bounds from a multipolygon"/>
     <property name="plugin.canloadatruntime" value="true"/>
-    <property name="plugin.icon" value="images/xml_24.png"/>
+    <property name="plugin.icon" value="images/imagery_xml_bounds_icon.svg"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/Imagery-XML-Bounds"/>
 
     <!-- ** include targets that all plugins have in common ** -->
