Change icons to SVG, references #19958
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@35594 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/photo_geotagging/build.xml
+++ b/photo_geotagging/build.xml
@@ -9,7 +9,7 @@
     <property name="plugin.author" value="Paul Hartmann"/>
     <property name="plugin.class" value="org.openstreetmap.josm.plugins.photo_geotagging.GeotaggingPlugin"/>
     <property name="plugin.description" value="Write gps position info to the image file header. Run this feature from the right click menu of the image layer."/>
-    <property name="plugin.icon" value="images/geotagging.png"/>
+    <property name="plugin.icon" value="images/geotagging.svg"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/Photo_Geotagging"/>
     <property name="plugin.canloadatruntime" value="true"/>
     <property name="plugin.requires" value="apache-commons"/>
