buildings_tools: recompile for compatibility with JOSM r17867, fixes #20885
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@35744 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/buildings_tools/build.xml
+++ b/buildings_tools/build.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project name="buildings_tools" default="dist" basedir=".">
     <!-- enter the SVN commit message -->
-    <property name="commit.message" value="buildings_tools: add option to disable click+drag"/>
+    <property name="commit.message" value="buildings_tools: recompile for compatibility with JOSM r17867"/>
     <!-- enter the *lowest* JOSM version this plugin is currently compatible with -->
-    <property name="plugin.main.version" value="17329"/>
+    <property name="plugin.main.version" value="17867"/>
     
     <!-- Configure these properties (replace "..." accordingly).
          See https://josm.openstreetmap.de/wiki/DevelopersGuide/DevelopingPlugins
