Fix #22263: Could not load plug-in 'ImportImagePlugin' due to log4j errors
This moves the plugin logging from log4j to the JOSM Logging class.

It also cleans up various lint issues and moves the unit tests from JUnit 4 to JUnit 5.


git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36013 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/ImportImagePlugin/.classpath
+++ b/ImportImagePlugin/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/JOSM"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JOSM-GeoTools"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JOSM-jts"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/JOSM-log4j"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/JOSM-ejml"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
