--- a/ImportImagePlugin/build.xml
+++ b/ImportImagePlugin/build.xml
@@ -11,13 +11,12 @@
     <property name="plugin.description" value="Plugin for importing spatial referenced images"/>
     <property name="plugin.icon" value="images/layericon.png"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/ImportImagePlugin"/>
-    <property name="plugin.requires" value="log4j;jts;ejml;geotools"/>
+    <property name="plugin.requires" value="jts;ejml;geotools"/>
     
     <!-- ** include targets that all plugins have in common ** -->
     <import file="../build-common.xml"/>
 
     <fileset id="plugin.requires.jars" dir="${plugin.dist.dir}">
-        <include name="log4j.jar"/>
         <include name="jts.jar"/>
         <include name="ejml.jar"/>
         <include name="geotools.jar"/>
