Rename geochat package to something much less likely to conflict with libraries
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36147 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/geochat/build.xml
+++ b/geochat/build.xml
@@ -7,7 +7,7 @@
     <property name="plugin.main.version" value="18723"/>
 
     <property name="plugin.author" value="Ilya Zverev"/>
-    <property name="plugin.class" value="geochat.GeoChatPlugin"/>
+    <property name="plugin.class" value="org.openstreetmap.josm.plugins.geochat.GeoChatPlugin"/>
     <property name="plugin.description" value="Talk with users editing the map nearby, be notified when someone comes close."/>
     <property name="plugin.icon" value="images/dialogs/geochat.png"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/GeoChat"/>
