Add java21_plugins to exclusions for all build.xml files
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36155 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/build.xml
+++ b/build.xml
@@ -39,7 +39,7 @@
                 <filelist dir="." files="${javafx_plugins}" if:set="isJava11"/>
                 <filelist dir="." files="${java17_plugins}" if:set="isJava17"/>
                 <filelist dir="." files="${java21_plugins}" if:set="isJava21"/>
-                <fileset  dir="." includes="*/build.xml" excludes="00_*/build.xml *.wip/build.xml ${javafx_plugins} ${ordered_plugins} ${java17_plugins}"/>
+                <fileset  dir="." includes="*/build.xml" excludes="00_*/build.xml *.wip/build.xml ${javafx_plugins} ${ordered_plugins} ${java17_plugins} ${java21_plugins} "/>
             </subant>
         </sequential>
     </macrodef>
