dist for SaudiNationalAddress with some build file fixes
build.xml for SaudiNationalAddress now specifies the java version.

git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36295 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/SaudiNationalAddress/build.xml
+++ b/SaudiNationalAddress/build.xml
@@ -13,6 +13,7 @@
               value="هذه الأداة تقوم بجلب العنوان الوطني لأي مبنى في المملكة العربية السعودية، يلزم تسجيل حساب لدى موقع https://api.address.gov.sa/"/>
     <property name="plugin.icon" value="images/icon.png"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/SaudiNationalAddress"/>
+    <property name="java.lang.version" value="11"/>
     <!--<property name="plugin.early" value="..."/>-->
     <!--<property name="plugin.requires" value="..."/>-->
     <!--<property name="plugin.stage" value="..."/>-->
