add javafx to ordered plugins
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36311 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/build.xml
+++ b/build.xml
@@ -18,6 +18,7 @@
                                             pmtiles/build.xml
                                             todo/build.xml"/>
     <property name="ordered_plugins" value="jackson/build.xml
+                                            javafx/build.xml
                                             jaxb/build.xml
                                             jna/build.xml
                                             jts/build.xml
