Use pom.xml for dependencies when ivy.xml is not available
This removes ivy.xml from javafx and converts rasterfilters to use maven for
dependency management instead of jars in source control. In addition
rasterfilters dependencies were upgraded to the latest versions.

javafx now requires Java 17 since OpenJFX 21 requires Java 17+.

opendata was upgraded to use jdom2 (see
https://github.com/JOSM/josm-plugins/security/dependabot/2)

git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36315 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/javafx/build.xml
+++ b/javafx/build.xml
@@ -11,7 +11,7 @@
     <property name="plugin.author" value="Don-vip"/>
     <property name="plugin.class" value="org.openstreetmap.josm.plugins.javafx.JavaFxPlugin"/>
     <property name="plugin.description" value="Provides additional OpenJFX (JavaFX) features such as MP3 audio playback."/>
-    <!--<property name="plugin.minimum.java.version" value="10"/>-->
+    <property name="plugin.minimum.java.version" value="17"/>
     <property name="plugin.provides" value="javafx"/>
     <!--<property name="plugin.icon" value="..."/>-->
     <!--<property name="plugin.link" value="..."/>-->
