--- a/build.xml
+++ b/build.xml
@@ -12,13 +12,13 @@
     <!-- Specific plugins -->
     <property name="java21_plugins" value="FIT/build.xml
                                             MicrosoftStreetside/build.xml" />
-    <property name="java17_plugins" value="imageio/build.xml
+    <property name="java17_plugins" value="javafx/build.xml
+                                            imageio/build.xml
                                             Mapillary/build.xml
                                             MapRoulette/build.xml
                                             pmtiles/build.xml
                                             todo/build.xml"/>
     <property name="ordered_plugins" value="jackson/build.xml
-                                            javafx/build.xml
                                             jaxb/build.xml
                                             jna/build.xml
                                             jts/build.xml
