--- a/javafx/pom.xml
+++ b/javafx/pom.xml
@@ -20,6 +20,7 @@
         <plugin.description>Provides additional OpenJFX (JavaFX) features such as MP3 audio playback.</plugin.description>
         <plugin.early>true</plugin.early>
         <plugin.stage>5</plugin.stage>
+        <plugin.minimum.java.version>17</plugin.minimum.java.version>
         <javafx.version>21.0.2</javafx.version>
     </properties>
     <!-- These dependencies should be installed on the host machine - our installers bundle them -->
