--- a/opendata/pom.xml
+++ b/opendata/pom.xml
@@ -70,12 +70,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-        <!-- Needed to compile jopendocument, provided by geotools later -->
+        <!-- Needed to compile jopendocument, not currently provided by geotools -->
         <dependency>
             <groupId>org.jdom</groupId>
-            <artifactId>jdom</artifactId>
-            <version>1.1.3</version>
-            <scope>provided</scope>
+            <artifactId>jdom2</artifactId>
+            <version>2.0.6.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <build>
