Drop most ivy files
This is mostly to ensure there is one place for dependency updates to occur, not
two.

lwjgl and geotools did not have their ivy files dropped, since there was a diff
between ivy and maven dependency builds. This is most likely due to dependency
exclusions. The geotools pom.xml now has all the exclusions from the ivy.xml file
now.

jts ''also'' had a diff between ivy and maven dependency builds, but the missing
files were test files (specifically, `*Test.class`) and test related files.

This additionally bumps the minimum JOSM version for everything that had an
ivy.xml file to r19044 for rebuild purposes (r19044 is Java 11+ only).

git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@36348 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4

--- a/jts/pom.xml
+++ b/jts/pom.xml
@@ -16,7 +16,7 @@
     </developers>
     <properties>
         <plugin.src.dir>src</plugin.src.dir>
-        <plugin.main.version>12164</plugin.main.version>
+        <plugin.main.version>19044</plugin.main.version>
     
         <plugin.author>Josh Doe &lt;josh@joshdoe.com&gt;</plugin.author>
         <plugin.class>org.openstreetmap.josm.plugins.jts.JTSPlugin</plugin.class>
@@ -24,18 +24,19 @@
         <plugin.icon>images/jts.png</plugin.icon>
         <plugin.canloadatruntime>true</plugin.canloadatruntime>
         <plugin.stage>10</plugin.stage>
+        <jts.version>1.19.0</jts.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.locationtech.jts</groupId>
             <artifactId>jts-core</artifactId>
-            <version>1.19.0</version>
+            <version>${jts.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.locationtech.jts.io</groupId>
             <artifactId>jts-io-common</artifactId>
-            <version>1.19.0</version>
+            <version>${jts.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
